--- a/package.json
+++ b/package.json
@@ -18,9 +18,14 @@
     "webpack-dev-server": "^1.14.1"
   },
   "devDependencies": {
+    "autoprefixer-loader": "^3.2.0",
     "babel-core": "^6.10.4",
     "babel-loader": "^6.2.4",
+    "babel-polyfill": "^6.9.1",
     "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.11.1"
+    "babel-preset-react": "^6.11.1",
+    "css-loader": "^0.23.1",
+    "less-loader": "^2.2.3",
+    "style-loader": "^0.13.1"
   }
 }
