--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "reactapp",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/index.js",
   "scripts": {
     "start": "webpack-dev-server --hot",
     "dev": "webpack-dev-server --devtool eval --progress --colors --hot --content-base build",
@@ -13,19 +13,20 @@
   "dependencies": {
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
-    "react-router": "^2.5.2",
-    "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1"
+    "react-router": "^2.5.2"
   },
   "devDependencies": {
-    "autoprefixer-loader": "^3.2.0",
     "babel-core": "^6.10.4",
     "babel-loader": "^6.2.4",
     "babel-polyfill": "^6.9.1",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
     "css-loader": "^0.23.1",
+    "less": "^2.7.1",
     "less-loader": "^2.2.3",
-    "style-loader": "^0.13.1"
+    "postcss-loader": "^0.9.1",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.13.1",
+    "webpack-dev-server": "^1.14.1"
   }
 }
